@@ -394,63 +394,55 @@ DEF_GPUTEST_FOR_RENDERING_CONTEXTS(SkImage_makeTextureImage, reporter, contextIn
         }
     };
 
-    sk_sp<SkColorSpace> dstColorSpaces[] ={
-        nullptr,
-        SkColorSpace::MakeSRGB(),
-    };
+    for (auto mipMapped : {GrMipMapped::kNo, GrMipMapped::kYes}) {
+        for (auto factory : imageFactories) {
+            sk_sp<SkImage> image(factory());
+            if (!image) {
+                ERRORF(reporter, "Error creating image.");
+                continue;
+            }
 
-    for (auto& dstColorSpace : dstColorSpaces) {
-        for (auto mipMapped : {GrMipMapped::kNo, GrMipMapped::kYes}) {
-            for (auto factory : imageFactories) {
-                sk_sp<SkImage> image(factory());
-                if (!image) {
-                    ERRORF(reporter, "Error creating image.");
-                    continue;
+            sk_sp<SkImage> texImage(image->makeTextureImage(context, mipMapped));
+            if (!texImage) {
+                GrContext* imageContext = as_IB(image)->context();
+
+                // We expect to fail if image comes from a different GrContext.
+                if (!image->isTextureBacked() || imageContext == context) {
+                    ERRORF(reporter, "makeTextureImage failed.");
                 }
+                continue;
+            }
+            if (!texImage->isTextureBacked()) {
+                ERRORF(reporter, "makeTextureImage returned non-texture image.");
+                continue;
+            }
+            if (GrMipMapped::kYes == mipMapped &&
+                as_IB(texImage)->peekProxy()->mipMapped() != mipMapped &&
+                context->priv().caps()->mipMapSupport()) {
+                ERRORF(reporter, "makeTextureImage returned non-mipmapped texture.");
+                continue;
+            }
+            if (image->isTextureBacked()) {
+                GrSurfaceProxy* origProxy = as_IB(image)->peekProxy();
+                GrSurfaceProxy* copyProxy = as_IB(texImage)->peekProxy();
 
-                sk_sp<SkImage> texImage(image->makeTextureImage(context, dstColorSpace.get(),
-                                                                mipMapped));
-                if (!texImage) {
-                    GrContext* imageContext = as_IB(image)->context();
-
-                    // We expect to fail if image comes from a different GrContext.
-                    if (!image->isTextureBacked() || imageContext == context) {
-                        ERRORF(reporter, "makeTextureImage failed.");
+                if (origProxy->underlyingUniqueID() != copyProxy->underlyingUniqueID()) {
+                    SkASSERT(origProxy->asTextureProxy());
+                    if (GrMipMapped::kNo == mipMapped ||
+                        GrMipMapped::kYes == origProxy->asTextureProxy()->mipMapped()) {
+                        ERRORF(reporter, "makeTextureImage made unnecessary texture copy.");
                     }
-                    continue;
-                }
-                if (!texImage->isTextureBacked()) {
-                    ERRORF(reporter, "makeTextureImage returned non-texture image.");
-                    continue;
-                }
-                if (GrMipMapped::kYes == mipMapped &&
-                    as_IB(texImage)->peekProxy()->mipMapped() != mipMapped &&
-                    context->priv().caps()->mipMapSupport()) {
-                    ERRORF(reporter, "makeTextureImage returned non-mipmapped texture.");
-                    continue;
-                }
-                if (image->isTextureBacked()) {
-                    GrSurfaceProxy* origProxy = as_IB(image)->peekProxy();
-                    GrSurfaceProxy* copyProxy = as_IB(texImage)->peekProxy();
-
-                    if (origProxy->underlyingUniqueID() != copyProxy->underlyingUniqueID()) {
-                        SkASSERT(origProxy->asTextureProxy());
-                        if (GrMipMapped::kNo == mipMapped ||
-                            GrMipMapped::kYes == origProxy->asTextureProxy()->mipMapped()) {
-                            ERRORF(reporter, "makeTextureImage made unnecessary texture copy.");
-                        }
-                    }
-                }
-                if (image->width() != texImage->width() || image->height() != texImage->height()) {
-                    ERRORF(reporter, "makeTextureImage changed the image size.");
-                }
-                if (image->alphaType() != texImage->alphaType()) {
-                    ERRORF(reporter, "makeTextureImage changed image alpha type.");
                 }
             }
+            if (image->width() != texImage->width() || image->height() != texImage->height()) {
+                ERRORF(reporter, "makeTextureImage changed the image size.");
+            }
+            if (image->alphaType() != texImage->alphaType()) {
+                ERRORF(reporter, "makeTextureImage changed image alpha type.");
+            }
         }
-        context->flush();
     }
+    context->flush();
 }
 
 DEF_GPUTEST_FOR_RENDERING_CONTEXTS(SkImage_makeNonTextureImage, reporter, contextInfo) {
@@ -463,12 +455,11 @@ DEF_GPUTEST_FOR_RENDERING_CONTEXTS(SkImage_makeNonTextureImage, reporter, contex
         create_picture_image,
         [context] { return create_gpu_image(context); },
     };
-    SkColorSpace* legacyColorSpace = nullptr;
     for (auto factory : imageFactories) {
         sk_sp<SkImage> image = factory();
         if (!image->isTextureBacked()) {
             REPORTER_ASSERT(reporter, image->makeNonTextureImage().get() == image.get());
-            if (!(image = image->makeTextureImage(context, legacyColorSpace))) {
+            if (!(image = image->makeTextureImage(context))) {
                 continue;
             }
         }
@@ -516,7 +507,7 @@ DEF_GPUTEST_FOR_RENDERING_CONTEXTS(UnpremulTextureImage, reporter, ctxInfo) {
                     SkColorSetARGB((U8CPU)y, 255 - (U8CPU)y, (U8CPU)x, 255 - (U8CPU)x);
         }
     }
-    auto texImage = SkImage::MakeFromBitmap(bmp)->makeTextureImage(ctxInfo.grContext(), nullptr);
+    auto texImage = SkImage::MakeFromBitmap(bmp)->makeTextureImage(ctxInfo.grContext());
     if (!texImage || texImage->alphaType() != kUnpremul_SkAlphaType) {
         ERRORF(reporter, "Failed to make unpremul texture image.");
         return;
