@@ -29,3 +29,5 @@ Milestone 78
 
  * Add SkCodec::SelectionPolicy for distinguishing between decoding a still image
    or an image sequence for a container format that has both (e.g. HEIF).
+
+* SkImage::makeTextureImage no longer takes an SkColorSpace parameter. It was unused.
